[package]
name = "pswd"
version = "0.1.0"
authors = ["xi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rpassword = "5.0.1"
rust-crypto = "^0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
